// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render header input with error 1`] = `
<header
  className="undefined tc-enumeration-header has-error"
>
  <input
    autoFocus={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="New entry"
    type="text"
  />
  <div
    className="undefined tc-enumeration-header-error"
  >
    duplicate value
  </div>
  <button
    aria-describedby={42}
    className="btn btn-link"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button"
  >
    <svg
      className=""
      viewBox="0 0 50 50"
    >
      <circle
        className={undefined}
        cx={25}
        cy={25}
        fill="none"
        r={20}
        style={
          Object {
            "strokeDasharray": 12.566370614359172,
            "strokeDashoffset": 0,
          }
        }
      />
    </svg>
  </button>
  <button
    aria-describedby={42}
    className="btn btn-link"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button"
  >
    <svg
      className=""
      viewBox="0 0 50 50"
    >
      <circle
        className={undefined}
        cx={25}
        cy={25}
        fill="none"
        r={20}
        style={
          Object {
            "strokeDasharray": 12.566370614359172,
            "strokeDashoffset": 0,
          }
        }
      />
    </svg>
  </button>
</header>
`;

exports[`Header should render header input with two buttons 1`] = `
<header
  className="undefined tc-enumeration-header"
>
  <input
    autoFocus={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="New entry"
    type="text"
  />
  <button
    aria-describedby={42}
    className="btn btn-link"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button"
  >
    <svg
      className=""
      viewBox="0 0 50 50"
    >
      <circle
        className={undefined}
        cx={25}
        cy={25}
        fill="none"
        r={20}
        style={
          Object {
            "strokeDasharray": 12.566370614359172,
            "strokeDashoffset": 0,
          }
        }
      />
    </svg>
  </button>
  <button
    aria-describedby={42}
    className="btn btn-link"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button"
  >
    <svg
      className=""
      viewBox="0 0 50 50"
    >
      <circle
        className={undefined}
        cx={25}
        cy={25}
        fill="none"
        r={20}
        style={
          Object {
            "strokeDasharray": 12.566370614359172,
            "strokeDashoffset": 0,
          }
        }
      />
    </svg>
  </button>
</header>
`;
